# protobuf_examples

./: .clang-format
cpp/: CMakeLists.txt  Makefile  pb2json.cpp  read_write.cpp
proto/: AddressBook.proto  JsonPerson.proto
proto/test/: test.proto
